added about view, route, controller action

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,6 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= yield %>          <!-- this yeild means it will now read from the home.thml.erb file --> 
   </body>
 </html>
