--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,7 +16,17 @@
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+body, .navbar {
+    //Gradient provided by @_ighosh at uiGradients.com
+    background: #E0EAFC;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #CFDEF3, #E0EAFC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+}
 h1, h2, h3 {
     font-family: 'Open Sans', sans-serif;
+}
+
+.navbar {
+    border: none;
 }
