--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,7 +16,7 @@
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
-body, .navbar {
+ .navbar, .home-callout {
     //Gradient provided by @_ighosh at uiGradients.com
     background: #E0EAFC;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);  /* Chrome 10-25, Safari 5.1-6 */
@@ -29,4 +29,10 @@ h1, h2, h3 {
 
 .navbar {
     border: none;
+}
+
+.home-callout {
+    margin-top: -20px;
+    padding-top: 50px;
+    padding-bottom: 100px;
 }
